[tool.poetry]
name = "alexis"
version = "0.1.0"
description = ""
authors = ["Matt Buchman <mbuchman00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
gooey = "^1.0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
